(supostamente) finaliza CRUD de usuario
